fix distorted background img from mobile end - trial 1

--- a/css/background.css
+++ b/css/background.css
@@ -18,7 +18,7 @@ img.bg {
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
     img.bg {
-        left: 50%;
+        left: 40%;
         margin-left: -512px;   /* 50% */
     }
 }
